--- a/src/scss/Pages/HomePage.scss
+++ b/src/scss/Pages/HomePage.scss
@@ -4,6 +4,7 @@
 @import "../Components/mixins";
 @import "../Components/globals";
 @import "../../Components/HomeHero/HomeHero.scss";
+@import "../../Components/PopUp/PopUp.scss";
 @import "../../Components/HomeAboutUs/HomeAboutUs.scss";
 @import "../../Components/HomeYourHouse/HomeYourHouse.scss";
 @import "../../Components/HomeProjects/HomePorjects.scss";
