--- a/src/Components/Contact/Contact.scss
+++ b/src/Components/Contact/Contact.scss
@@ -95,11 +95,26 @@
   align-items: center;
   justify-content: center;
   border: none;
-  margin: 10vw 0;
+  margin: 10vw 0 4vw;
   color: $color-variacion7;
   font-family: $Fuente3;
   background-color: $color-claro;
   @include buttons;
+}
+
+.ContactResponseContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 20vw;
+  font-size: 4vw;
+  color: $color-claro;
+  font-family: $Fuente3;
+}
+
+.Loader--Image {
+  width: 20vw;
 }
 
 @media screen and (min-width: 768px) {
@@ -118,7 +133,7 @@
     }
     &__Content {
       width: 50%;
-      padding: 6vw 0 4vw;
+      padding: 6vw 0 3vw;
       margin-top: 0;
       right: 0;
       bottom: 0;
@@ -220,6 +235,16 @@
   .Contact--Submit {
     width: 8vw;
     font-size: 1vw;
-    margin: 2vw auto 0;
+    margin: 2vw auto 1vw;
+  }
+
+  .ContactResponseContainer {
+    width: 100%;
+    height: 4vw;
+    font-size: 1vw;
+  }
+
+  .Loader--Image {
+    width: 4vw;
   }
 }
