--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -4,6 +4,8 @@
   justify-content: center;
   align-items: center;
   padding-bottom: 12vw;
+  position: absolute;
+  bottom: 0;
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.3);
 }
 
