--- a/src/Components/HomeHero/HomeHero.scss
+++ b/src/Components/HomeHero/HomeHero.scss
@@ -13,17 +13,44 @@
     margin: 0 auto;
     &--Title {
       margin: 0 0 6vw;
+      transition: 2s;
+      opacity: 0;
+
+      will-change: opacity;
+      animation-name: opacityanimation;
+      animation-duration: 0.1s;
+      animation-fill-mode: forwards;
+      animation-delay: 1.6s;
     }
     &--Description {
       font-size: 5vw;
       line-height: 130%;
       margin: 0 0 6vw;
+      opacity: 0;
+
+      will-change: opacity;
+      animation-name: opacityanimation;
+      animation-duration: 0.1s;
+      animation-fill-mode: forwards;
+      animation-delay: 1.6s;
       color: $color-claro;
     }
     &--Button {
       width: 48vw;
+      text-decoration: none;
+      transition: 0.3s;
+      opacity: 0;
+      will-change: background-color opacity;
+      animation-name: opacityanimation;
+      animation-duration: 0.1s;
+      animation-fill-mode: forwards;
+      animation-delay: 1.6s;
       background-color: $color-variacion6;
       @include buttons;
+      &:hover {
+        text-decoration: none;
+        background-color: $color-variacion3;
+      }
       & p {
         margin: 0 2vw 0 5vw;
         color: $color-claro;
@@ -56,6 +83,8 @@
     left: 33vw;
     width: 85%;
     height: 50vw;
+    transition: 2s;
+    will-change: margin;
     &--Image {
       width: 100%;
       margin-top: -16vw;
@@ -104,8 +133,13 @@
     &__Content {
       width: 90%;
       padding: 15vw 0 12vw;
-      margin: 0;
+      margin: 0 0 0 -100%;
       height: 51vw;
+      will-change: margin;
+      animation-name: contentcontainer;
+      animation-duration: 1s;
+      animation-fill-mode: forwards;
+      animation-delay: 0.5s;
       background-color: $color-variacion1;
       &--Title {
         margin: 0 0 2vw 10vw;
@@ -135,7 +169,18 @@
       top: 0;
       right: 0;
       width: 35%;
+      animation-name: bluecontainer;
+      animation-duration: 1s;
+      animation-fill-mode: forwards;
+      animation-delay: 0.7s;
+      transform: translateY(60vw);
       &--Square {
+        animation-name: squareanimation;
+        animation-duration: 1s;
+        animation-fill-mode: forwards;
+        animation-delay: 0.7s;
+        transform: translateY(-100vw);
+        will-change: transform;
         z-index: 2;
         top: -35vw;
         left: 18vw;
@@ -150,8 +195,15 @@
       width: 43vw;
       height: auto;
       display: flex;
+
       justify-content: center;
       align-items: center;
+
+      animation-name: imagecontainer;
+      animation-duration: 2s;
+      animation-fill-mode: forwards;
+      animation-delay: 1s;
+      transform: translateX(-100vw);
       &--Image {
         width: 102%;
         margin: -0.1vw 0 0;
@@ -159,6 +211,13 @@
     }
     &__SocialMedia {
       display: flex;
+
+      opacity: 0;
+      will-change: opacity;
+      animation-name: opacityanimation;
+      animation-duration: 0.5s;
+      animation-fill-mode: forwards;
+      animation-delay: 3s;
       position: absolute;
       flex-direction: column;
       align-items: center;
@@ -201,4 +260,65 @@
   .HomeHeroTitle-Line3 {
     letter-spacing: 0.4vw;
   }
+
+  // ANIMATIONS
+
+  @keyframes opacityanimation {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  @keyframes contentcontainer {
+    0% {
+      margin-left: -100%;
+    }
+    100% {
+      margin-left: 0;
+    }
+  }
+
+  @keyframes bluecontainer {
+    0% {
+      transform: translateY(60vw);
+    }
+    100% {
+      transform: translateY(0vw);
+    }
+  }
+
+  @keyframes imagecontainer {
+    0% {
+      transform: translateX(-100vw);
+    }
+    100% {
+      transform: translateX(0vw);
+    }
+  }
+
+  @keyframes squareanimation {
+    0% {
+      transform: translateY(-100vw);
+    }
+    100% {
+      transform: translateY(0vw);
+    }
+  }
+
+  // .HomeHeroContainer__Content {
+  // }
+  // .HomeHeroContainer__Content--Title,
+  // .HomeHeroContainer__Content--Description {
+  //   opacity: 0;
+  // }
+
+  // .HomeHeroContainer__Bottom {
+  // }
+
+  // .HomeHeroContainer__ImageContainer {
+  //   transform: translateX(-300%);
+  // }
 }
