--- a/src/scss/Pages/GuideCalendlyPage.scss
+++ b/src/scss/Pages/GuideCalendlyPage.scss
@@ -4,3 +4,4 @@
 @import "../Components/globals";
 @import "../Components/mixins";
 @import "../../Components/GuideCalendlyContent/GuideCalendlyContent.scss";
+@import "../../Components/PopUp/PopUp.scss";
