--- a/src/scss/Pages/PacksPage.scss
+++ b/src/scss/Pages/PacksPage.scss
@@ -7,3 +7,4 @@
 @import "../../Components/PacksOurPacks/PacksOurPacks.scss";
 @import "../../Components/PacksPacks/PacksPacks.scss";
 @import "../../Components/Contact/Contact.scss";
+@import "../../Components/PopUp/PopUp.scss";
