--- a/src/Components/PopUp/PopUp.scss
+++ b/src/Components/PopUp/PopUp.scss
@@ -2,11 +2,12 @@
   position: fixed;
   z-index: 10;
   top: 0;
+  padding-top: 5vw;
   width: 100%;
   height: 100vh;
   overflow: auto;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   background-color: rgba(0, 0, 0, 0.6);
   pointer-events: none;
   display: flex;
@@ -110,6 +111,19 @@
   }
 }
 
+.Guide-Input {
+  display: none;
+}
+
+.PopUpState {
+  bottom: 5.5vw;
+  right: 5vw;
+  position: absolute;
+  &__Loader {
+    width: 16vw;
+  }
+}
+
 .PopUpInactive {
   display: none;
 }
@@ -198,11 +212,11 @@
       font-size: 0.9vw;
       color: $color-secundario;
       font-family: $Fuente3;
-      &:nth-child(3) {
+      &:nth-child(4) {
         position: absolute;
         right: 0;
       }
-      &:nth-child(7) {
+      &:nth-child(8) {
         right: 0;
         top: 3.7vw;
         position: absolute;
@@ -213,12 +227,12 @@
       font-size: 0.9vw;
       margin-bottom: 0.8vw;
       border-bottom: 0.15vw solid $color-secundario;
-      &:nth-child(4) {
+      &:nth-child(5) {
         position: absolute;
         right: 0;
         top: 1.4vw;
       }
-      &:nth-child(8) {
+      &:nth-child(9) {
         right: 0;
         position: absolute;
         top: 5.1vw;
@@ -228,6 +242,15 @@
       width: 50%;
       margin: 0.5vw auto 1.5vw;
       cursor: pointer;
+    }
+  }
+
+  .PopUpState {
+    bottom: 1.4vw;
+    right: 6.5vw;
+    position: absolute;
+    &__Loader {
+      width: 3vw;
     }
   }
 
