--- a/src/Components/HomeHero/HomeHero.scss
+++ b/src/Components/HomeHero/HomeHero.scss
@@ -1,7 +1,7 @@
 .HomeHero {
-  background-color: $color-variacion1;
   width: 100%;
   padding-top: 24vw;
+  background-color: $color-variacion1;
 }
 
 .HomeHeroContainer {
@@ -14,37 +14,35 @@
     &--Title {
       margin: 0 0 6vw;
       transition: 2s;
-      opacity: 1;
-
+      opacity: 0;
       will-change: opacity;
       animation-name: opacityanimation;
-      animation-duration: 0.1s;
+      animation-duration: 0.5s;
       animation-fill-mode: forwards;
-      animation-delay: 1.6s;
+      animation-delay: 1.5s;
     }
     &--Description {
       font-size: 5vw;
       line-height: 130%;
       margin: 0 0 6vw;
-      opacity: 1;
-
+      opacity: 0;
       will-change: opacity;
       animation-name: opacityanimation;
-      animation-duration: 0.1s;
+      animation-duration: 0.5s;
       animation-fill-mode: forwards;
-      animation-delay: 1.6s;
+      animation-delay: 1.9s;
       color: $color-claro;
     }
     &--Button {
       width: 48vw;
       text-decoration: none;
       transition: 0.3s;
-      opacity: 1;
+      opacity: 0;
       will-change: background-color opacity;
       animation-name: opacityanimation;
-      animation-duration: 0.1s;
+      animation-duration: 0.5s;
       animation-fill-mode: forwards;
-      animation-delay: 1.6s;
+      animation-delay: 2.2s;
       background-color: $color-variacion6;
       @include buttons;
       &:hover {
@@ -65,6 +63,11 @@
     display: flex;
     overflow: hidden;
     position: relative;
+    animation-name: bluecontainer;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    animation-delay: 0.7s;
+    transform: translateX(-101vw);
     background-color: $color-variacion7;
     &--Square {
       top: 16vw;
@@ -73,6 +76,11 @@
       display: flex;
       width: 100%;
       height: 100%;
+      animation-name: squareanimation;
+      animation-duration: 1s;
+      animation-fill-mode: forwards;
+      animation-delay: 1.7s;
+      transform: translateY(35vw);
       border: 2.5vw solid $color-claro;
     }
   }
@@ -85,6 +93,11 @@
     height: 50vw;
     transition: 2s;
     will-change: margin;
+    animation-name: imagecontainer;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+    animation-delay: 1.5s;
+    transform: translateX(90vw);
     &--Image {
       width: 100%;
       margin-top: -16vw;
@@ -112,12 +125,47 @@
 
 .HomeHeroTitle-Line2 {
   letter-spacing: 1.1vw;
-
   color: $color-claro;
 }
 
 .HomeHeroTitle-Line3 {
   color: $color-variacion4;
+}
+
+@keyframes opacityanimation {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes bluecontainer {
+  0% {
+    transform: translateX(-101vw);
+  }
+  100% {
+    transform: translateY(0vw);
+  }
+}
+
+@keyframes imagecontainer {
+  0% {
+    transform: translateX(90vw);
+  }
+  100% {
+    transform: translateX(0vw);
+  }
+}
+
+@keyframes squareanimation {
+  0% {
+    transform: translateY(35vw);
+  }
+  100% {
+    transform: translateY(0vw);
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -145,6 +193,11 @@
         margin: 0 0 2vw 10vw;
         width: 29vw;
         opacity: 0;
+        will-change: opacity;
+        animation-name: opacityanimation;
+        animation-duration: 0.1s;
+        animation-fill-mode: forwards;
+        animation-delay: 1.6s;
       }
       &--Description {
         letter-spacing: 0.1vw;
@@ -152,12 +205,19 @@
         margin: 0 0 4vw 10vw;
         width: 28vw;
         opacity: 0;
+        animation-name: opacityanimation;
+        animation-duration: 0.1s;
+        animation-fill-mode: forwards;
+        animation-delay: 1.6s;
       }
       &--Button {
         width: 12vw;
         margin-left: 10vw;
         opacity: 0;
-
+        animation-name: opacityanimation;
+        animation-duration: 0.1s;
+        animation-fill-mode: forwards;
+        animation-delay: 1.6s;
         & p {
           margin: 0 0.5vw 0 1vw;
         }
@@ -199,10 +259,8 @@
       width: 43vw;
       height: auto;
       display: flex;
-
       justify-content: center;
       align-items: center;
-
       animation-name: imagecontainer;
       animation-duration: 2s;
       animation-fill-mode: forwards;
@@ -215,7 +273,6 @@
     }
     &__SocialMedia {
       display: flex;
-
       opacity: 0;
       will-change: opacity;
       animation-name: opacityanimation;
@@ -311,18 +368,4 @@
       transform: translateY(0vw);
     }
   }
-
-  // .HomeHeroContainer__Content {
-  // }
-  // .HomeHeroContainer__Content--Title,
-  // .HomeHeroContainer__Content--Description {
-  //   opacity: 0;
-  // }
-
-  // .HomeHeroContainer__Bottom {
-  // }
-
-  // .HomeHeroContainer__ImageContainer {
-  //   transform: translateX(-300%);
-  // }
 }
