--- a/src/Components/NavBar/NavBar.scss
+++ b/src/Components/NavBar/NavBar.scss
@@ -56,13 +56,13 @@
   overflow: auto;
   display: flex;
   flex-direction: column;
-  background-color: $color-variacion7;
   z-index: 5;
   top: 0;
   left: 0;
   opacity: 0;
   pointer-events: none;
   transition: 0.3s ease-in;
+  background-color: $color-variacion7;
 }
 
 .MenuClose {
@@ -187,11 +187,14 @@
     }
   }
 
+  .MenuOptions {
+    color: $color-claro;
+  }
+
   .MenuOptions p {
     margin: 0;
     transition: 0.3s;
     will-change: color;
-    color: $color-claro;
   }
 
   .MenuOptions p:hover {
@@ -200,5 +203,9 @@
 
   .SocialMedia {
     display: none;
+  }
+
+  .MenuOptions.active {
+    color: $color-variacion8;
   }
 }
