--- a/src/Components/PopUp/PopUp.scss
+++ b/src/Components/PopUp/PopUp.scss
@@ -2,7 +2,7 @@
   position: fixed;
   z-index: 10;
   top: 0;
-  padding-top: 5vw;
+  padding-top: 10vw;
   width: 100%;
   height: 100vh;
   overflow: auto;
@@ -13,7 +13,6 @@
   display: flex;
   opacity: 0;
   will-change: opacity;
-
   animation-name: popupappears;
   animation-duration: 1s;
   animation-delay: 7s;
@@ -22,7 +21,7 @@
 
 .PopUpContainer {
   width: 90%;
-  height: 165vw;
+  height: 150vw;
   position: relative;
   opacity: 0;
   will-change: opacity;
@@ -31,7 +30,6 @@
   animation-delay: 7.5s;
   animation-fill-mode: forwards;
   background-color: $color-claro;
-
   &__Close {
     position: absolute;
     right: 3vw;
@@ -56,7 +54,7 @@
     margin: -5vw auto 0;
     background-color: $color-claro;
     &--Pretitle {
-      padding: 5vw 0 0;
+      padding: 3vw 0 0;
       margin: 0;
       font-size: 4.5vw;
       text-align: center;
@@ -64,8 +62,9 @@
       color: $color-secundario;
     }
     &--Title {
-      margin: 0 0 4vw;
+      margin: 0 0 2vw;
       letter-spacing: 0.5vw;
+      line-height: 130%;
       font-size: 6.9vw;
       text-align: center;
       font-family: $Fuente1;
@@ -94,7 +93,7 @@
     font-size: 4vw;
     outline: none;
     border: none;
-    margin-bottom: 5vw;
+    margin-bottom: 3vw;
     font-family: $Fuente3;
     border-bottom: 0.6vw solid $color-secundario;
   }
@@ -175,7 +174,6 @@
         padding: 2.5vw 0 0;
         width: 75%;
         margin: 0 0 0.5vw;
-
         font-size: 1vw;
         text-align: start;
       }
