--- a/src/Components/PacksOurPacks/PacksOurPacks.scss
+++ b/src/Components/PacksOurPacks/PacksOurPacks.scss
@@ -1,5 +1,5 @@
 .PacksOurPacks {
-  padding: 20vw 0;
+  padding: 20vw 0 0vw;
 }
 
 .PacksOurPacksContainer {
@@ -14,8 +14,8 @@
     align-items: center;
     background-color: #c7c7c7;
     &--CheckIcon {
-      width: 18vw;
-      margin: -19vw 0 5vw;
+      width: 13vw;
+      margin: -16vw 0 5vw;
     }
     &--Title {
       width: 85%;
@@ -88,7 +88,8 @@
       }
     }
     &--Image {
-      width: 15vw;
+      margin-top: 2vw;
+      width: 13vw;
     }
   }
   &__Recomended {
@@ -113,10 +114,36 @@
     }
     &--Arrow {
       width: 10vw;
+      animation-name: packarrowanimation;
+      animation-duration: 2.5s;
+      animation-iteration-count: infinite;
+      opacity: 0;
     }
   }
 }
 
+@keyframes packarrowanimation {
+  0% {
+    opacity: 0;
+    transform: translateY(-2vw);
+  }
+  15% {
+    opacity: 1;
+  }
+
+  75% {
+    opacity: 1;
+  }
+
+  90% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 0;
+    transform: translateY(2vw);
+  }
+}
 .PacksButton1 {
   color: $color-gris;
   &:hover {
@@ -195,6 +222,9 @@
         opacity: 1;
         will-change: opacity;
         transition: 0.5s;
+        &:hover {
+          transform: scale(1.1);
+        }
       }
       &--Line {
         display: flex;
@@ -221,6 +251,9 @@
 
       width: 22.5vw;
       flex-direction: column-reverse;
+      &:hover .PacksOurPacksContainer__ButtonContainer--Image {
+        transform: scale(1.3) translateY(-0.5vw);
+      }
       &--Link {
         width: 19vw;
         height: 5.5vw;
@@ -233,7 +266,11 @@
         }
       }
       &--Image {
-        width: 4vw;
+        margin-top: 0;
+        margin-bottom: 0.5vw;
+        width: 2.5vw;
+        will-change: transform;
+        transition: 0.3s;
       }
     }
     &__Recomended {
@@ -253,8 +290,8 @@
         letter-spacing: 0.1vw;
       }
       &--Arrow {
-        width: 2.5vw;
-        margin-bottom: 0.5vw;
+        width: 3vw;
+        margin: 0.5vw 0;
         transform: rotateX(180deg);
       }
     }
@@ -265,5 +302,28 @@
   .PacksBox {
     transform: translateY(7vw);
     background-color: transparent;
+  }
+
+  @keyframes packarrowanimation {
+    0% {
+      opacity: 0;
+      transform: translateY(0.7vw) rotateX(180deg);
+    }
+    15% {
+      opacity: 1;
+    }
+
+    75% {
+      opacity: 1;
+    }
+
+    90% {
+      opacity: 0;
+    }
+
+    100% {
+      opacity: 0;
+      transform: translateY(-0.7vw) rotateX(180deg);
+    }
   }
 }
