--- a/src/Components/PacksPacks/PacksPacks.scss
+++ b/src/Components/PacksPacks/PacksPacks.scss
@@ -11,18 +11,14 @@
 }
 
 .Pack1 {
-  margin-bottom: 20vw;
   background-color: $color-variacion1;
 }
 
 .Pack2 {
-  margin-bottom: 20vw;
-
   background-color: #b48d70;
 }
 
 .Pack3 {
-  margin-bottom: 5vw;
   background-color: $color-variacion7;
 }
 
@@ -40,7 +36,7 @@
       margin: 0;
       font-size: 7vw;
       letter-spacing: 1.5vw;
-      font-weight: 600;
+      font-weight: 500;
       will-change: opacity;
       transition: 0.5s;
       font-family: $Fuente1;
@@ -108,6 +104,7 @@
     margin: 0 0 2vw;
     line-height: 120%;
     font-size: 4vw;
+    font-weight: 400;
     background-size: 5vw;
     background-position: top left;
     background-repeat: no-repeat;
@@ -156,10 +153,10 @@
 }
 
 .Bg-Brown {
-  background-color: #d2ab8e;
+  background-color: #d3ac91;
 }
 .Color-Brown {
-  color: #d2ab8e;
+  color: #ffdac1;
 }
 
 .Bg-Blue {
@@ -169,52 +166,58 @@
   color: $color-variacion8;
 }
 
+.SpanPack3 {
+  margin-left: 1vw;
+}
 @media screen and (min-width: 768px) {
 }
 
 @media screen and (min-width: 1100px) {
   .PacksPacks {
-    margin: 0;
+    margin: 0 auto;
     padding: 4vw 0;
+    width: 80%;
   }
 
   .Pack1 {
-    margin-bottom: 10vw;
+    margin-bottom: 7vw;
   }
   .Pack2 {
-    margin-bottom: 10vw;
+    margin-bottom: 7vw;
   }
   .Pack3 {
     margin-bottom: 0;
   }
 
   .PacksContainerRight {
-    margin-left: 20%;
+    margin-left: 10%;
   }
 
   .PacksContainerLeft {
-    margin-right: 20%;
+    margin-right: 10%;
     align-items: flex-end;
   }
 
   .PacksTitleContainer {
-    width: 80%;
+    width: 90%;
     display: flex;
     flex-direction: column;
     position: relative;
     &__Subcontainer {
-      width: 26%;
+      width: 33%;
       display: flex;
       justify-content: flex-end;
       align-items: center;
+
       &--Image {
         width: 6.5vw;
+        margin: 0 2vw 0;
         transition: 0.5s;
         will-change: opacity;
       }
       &--Pack {
         margin: 0;
-        font-size: 3vw;
+        font-size: 2.5vw;
         letter-spacing: 0.4vw;
         line-height: 110%;
         transition: 0.5s;
@@ -222,7 +225,7 @@
       }
     }
     &__Title {
-      width: 45%;
+      width: 50%;
       margin: 0;
       letter-spacing: 0.3vw;
       font-size: 4vw;
@@ -244,7 +247,7 @@
       border-top: 0.3vw solid $color-claro;
     }
     &__Text {
-      width: 45%;
+      width: 50%;
       margin: 0;
       font-size: 1.43vw;
       line-height: 110%;
@@ -292,33 +295,37 @@
 
   .PackImageLeft {
     margin-right: auto;
-    left: 0;
+    left: -4vw;
     top: -7vw;
   }
 
   .PackImageRight {
     margin-left: auto;
-    right: 0;
+    right: -4vw;
     top: -7vw;
   }
 
   .PacksDescriptions {
-    width: 30%;
+    width: 37%;
     margin: 0 auto;
     opacity: 1;
     will-change: opacity;
     transition: 0.5s;
     &__Text {
       padding-left: 2vw;
-      margin: 0 0 0.5vw;
-      line-height: 120%;
-      font-size: 1.3vw;
-      background-size: 1.5vw;
-      background-position: top left;
+      margin: 0 0;
+      line-height: 200%;
+      font-size: 1.1vw;
+      background-size: 1.8vw;
+      background-position: left 0.05vw;
       background-repeat: no-repeat;
       font-family: $Fuente3;
       color: $color-claro;
     }
+  }
+
+  .PacksText2 {
+    width: 48%;
   }
 
   .PacksText3 {
@@ -338,5 +345,17 @@
 
   .RecomendedPack {
     transform: translateX(42vw);
+  }
+  .SpanPack3 {
+    margin-left: 0.5vw;
+  }
+
+  .Pack3-Descriptions {
+    display: flex;
+    width: 65%;
+  }
+
+  .Pack3-Subcontainer {
+    width: 48%;
   }
 }
