--- a/src/scss/Pages/GuideCalendlyPage.scss
+++ b/src/scss/Pages/GuideCalendlyPage.scss
@@ -3,5 +3,7 @@
 @import "../Components/variables";
 @import "../Components/globals";
 @import "../Components/mixins";
+@import "../../Components/PopUp/PopUp.scss";
+
 @import "../../Components/GuideCalendlyContent/GuideCalendlyContent.scss";
 @import "../../Components/PopUp/PopUp.scss";
