--- a/src/Components/NavBar/NavBar.scss
+++ b/src/Components/NavBar/NavBar.scss
@@ -57,14 +57,14 @@
   margin-bottom: -3vw;
 
   &__Active {
-    transform: rotateZ(-225deg);
+    transform: rotateZ(45deg);
     margin: 0;
   }
 }
 .MenuLine2 {
   margin-top: -3vw;
   &__Active {
-    transform: rotateZ(225deg);
+    transform: rotateZ(-45deg);
     margin: 0;
   }
 }
@@ -162,6 +162,7 @@
     &__Logo {
       width: 7vw;
       z-index: 10;
+      padding: 0;
     }
     &__MenuButton {
       display: none;
