Prueba hash router

--- a/src/scss/Styles.scss
+++ b/src/scss/Styles.scss
@@ -5,3 +5,4 @@
 @import "./Components/globals";
 @import "../Components/NavBar/NavBar.scss";
 @import "../Components/Footer/Footer.scss";
+@import "../Components/PopUp/PopUp.scss";
